--- a/index.html
+++ b/index.html
@@ -101,12 +101,21 @@
                 <td>3.920</td>
                 <td><a href="semester3.html"><button class="view-button">View</button></a></td>
             </tr>
-
+            <tr>
+                <td>4</td>
+                <td>2024/2025-2</td>
+                <td>184.27</td>
+                <td>61</td>
+                <td>3.910</td>
+                <td>3.920</td>
+                <td><a href="semester3.html"><button class="view-button">View</button></a></td>
+            </tr>
         </table>
     </div>
 </div>
 
 </body>
 </html>
+
 
 
